syntax = "proto3";

package com.tmk.grpckt;

option java_multiple_files = true;
option java_package = "com.tmk.grpckt.named.greeter";
option java_outer_classname = "FetchGreetingResponseProto";

message FetchGreetingResponse {
  string greeting = 1;
}